<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Text Size-->
    <TableRow
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:gravity="center"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/text_size_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp">

        </Spinner>

    </TableRow>

    <!--Text alignment-->
    <TableRow
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/text_alignment"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/text_align_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp">

        </Spinner>

    </TableRow>

    <!--Text styles-->
    <TableRow
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/font_style"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/text_style_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp">

        </Spinner>

    </TableRow>

    <!--Text Typography-->
    <TableRow
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/typo"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/text_typo_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp">

        </Spinner>

    </TableRow>

    <!--Text Size-->
    <TableRow
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/font_size"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/text_size_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp">

        </Spinner>

    </TableRow>

</LinearLayout>