<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/format_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:text="@string/choose"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/accent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/text_view"
                        android:textColor="@color/colorPrimaryDark" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp">

                            <TextView
                                android:id="@+id/normal_view"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?attr/selectableItemBackgroundBorderless"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/normal"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/bold_view"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?attr/selectableItemBackgroundBorderless"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/bold"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp">

                            <TextView
                                android:id="@+id/bold_italic_view"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?attr/selectableItemBackgroundBorderless"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/italic"
                                android:textSize="16sp"
                                android:textStyle="bold|italic" />

                            <TextView
                                android:id="@+id/italic_view"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:clickable="true"
                                android:focusable="true"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/italic"
                                android:textSize="16sp"
                                android:textStyle="italic" />

                        </TableRow>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/accent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/text_case"
                        android:textColor="@color/colorPrimaryDark" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp">

                        <TextView
                            android:id="@+id/lower_case_view"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/lower"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/upper_case_view"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/upper"
                            android:textAllCaps="true"
                            android:textSize="16sp" />

                    </TableRow>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/accent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:padding="4dp"
                        android:text="@string/text_alignment"
                        android:textColor="@color/colorPrimaryDark" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/align_left"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="@null"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:padding="12dp"
                            android:src="@drawable/ic_text_align_start" />

                        <ImageView
                            android:id="@+id/align_center"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="@null"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:padding="12dp"
                            android:src="@drawable/ic_text_alignment" />

                        <ImageView
                            android:id="@+id/align_end"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="@null"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:padding="12dp"
                            android:src="@drawable/ic_text_align_end" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>