<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/llMainContents"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:orientation="vertical"
        android:paddingBottom="24dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_as"
                android:layout_marginTop="32dp"
                android:layout_marginStart="3dp"
                android:padding="4dp"/>

            <EditText
                android:id="@+id/file_name_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:background="@drawable/view_border"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/enter_file_name"
                android:padding="8dp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/alert_button_bg"
                android:minHeight="40dp"
                android:text="@string/save"
                android:textColor="@drawable/alert_button_text_bg"  />


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:elevation="4dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@null"
            android:padding="8dp"
            android:src="@drawable/circular_view" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerInParent="true"
            android:contentDescription="@null"
            android:src="@drawable/ic_edit_icon"
            android:tint="@color/white" />

    </RelativeLayout>

</RelativeLayout>